<resources>
    <string name="just" translatable="false">Coffee order</string>
    <string name="quantity">Quantity</string>
    <string name="order">order</string>
    <string name="price">price</string>
    <string name="plus" translatable="false">plus</string>
    <string name="minus" translatable="false">-</string>
    <string name="_1" translatable="false">1</string>
    <string name="_5">$</string>
    <string name="name" translatable="false">Name</string>
    <string name="_plus" translatable="false">+</string>
    <string name="toppings">Toppings</string>
    <string name="coffee_price">Coffee price: </string>
    <string name="chocolate_topping_price">Chocolate topping price:</string>
    <string name="whipe_topping_price">Whipe topping price:</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="next">Quantity</string>
    <string name="coffee">Coffee order</string>
</resources>